# agent_perf_testing

./: .gitignore  README.md  agent_patterns.csv  check_win.py  deploy_win_emu.py  deploy_windows_emulator.py  pyproject.toml  run_baseline_test.py  run_baseline_test.sh  run_test.py  serve_packages.py  test_all_packages.py  test_calibration.sh  test_check_emulator.py  test_deploy_all.py  test_emulator_cpu.sh  test_emulator_deploy.py  test_emulator_endpoints.py  test_steady_load.py  test_upload_chunk.py  test_winrm.py  test_winrm_transports.py
orchestrator/: alembic.ini  pyproject.toml  requirements.txt  seed_packages.py  take_screenshots.py  take_wizard_screenshots.py
orchestrator/alembic/versions/: 001_initial_schema.py
orchestrator/app/: config.py
orchestrator/app/calibration/: emulator_client.py  service.py
orchestrator/app/execution/: executor.py  state_machine.py
orchestrator/app/jmeter/: models.py  service.py
orchestrator/app/models/: __init__.py  application.py  enums.py  orm.py
orchestrator/app/orchestration/: execution_controller.py  os_discovery.py  (+2 more)
orchestrator/config/: credentials.example.json  credentials.json  orchestrator.yaml  orchestrator_default.yaml
orchestrator/docs/: BASELINE_COMPARE_DESIGN.md  BASELINE_COMPARE_RUNBOOK.md  BASELINE_VS_LIVE_COMPARE_ANALYSIS.md  COMPARISON_METHODOLOGY.md  FAILURE_HANDLING_MATRIX.md  WORKFLOW_STATE_CREATION_FLOW.md
orchestrator/migrations/: add_agent_detection_rules.sql  add_baseline_compare_tables.sql  add_baseline_execution_results.sql  add_baseline_test_run_targets.sql  add_clean_snapshot_id.sql  add_server_role_and_root_snapshot.sql  add_snapshot_groups.sql  add_snapshot_provider_id.sql  add_subgroup_definitions.sql  env.py  fix_baseline_compare_issues.sql  restructure_baseline_tests.sql  state_machine_redesign.sql  state_machine_redesign_postgres.sql
orchestrator/scripts/: setup_proxmox_lab.py
orchestrator/tests/: conftest.py  test_api.py  test_comparison.py  test_config.py  test_jtl_parser.py  test_orm_models.py  test_package_resolver.py  test_pool_and_network.py  test_state_machine.py  test_stats_parser.py
(+635 files in other folders)
